istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tradehub-mtls
  namespace: tradehub
spec:
  mtls:
    mode: PERMISSIVE
